integration_test/manifests/portal-frontend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: portal-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portal-frontend
    spec:
      containers:
      - name: app
        image: ghcr.io/mojaloop/finance-portal-v2-ui:v2.0.6
        ports:
        - containerPort: 8080
