integration_test/manifests/portal-frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-frontend
  labels:
    app.kubernetes.io/name: portal-frontend
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app.kubernetes.io/name: portal-frontend
